# trizetto_file

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: V6.15 2026 Remittance Report Master Updated 05052026.xlsx  pipeline_state.db
docs/: workflow.md
remit_pipeline/: __init__.py  config.py  edi_parser.py  report_builder.py  sftp_client.py  state_db.py
